<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="agent_app">The agent app</string>
    <string name="app_name">Musa Keys</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="available_musa_fonts">Available Musa Fonts</string>
    <string name="background_service_stopped">Background service stopped</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cant_find_font_file">Cannot find font file:</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_font_size">Choose text font size</string>
    <string name="choose_language">Choose language</string>
    <string name="clear_message">Clear messages?</string>
    <string name="close">Close</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="connecting_to_agent">Connecting to the agent</string>
    <string name="date">24feb23</string>
    <string name="disconnected">Disconnected</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="error">Error</string>
    <string name="explanation_text">Use buttons below to install fonts or update them from Musa website</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fonts">Fonts</string>
    <string name="got_it">Got it</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="install">Install</string>
    <string name="instructions_menu_item">Help</string>
    <string name="large">large</string>
    <string name="medium">medium</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>
    <string name="menu_send">Send</string>
    <string name="menu_share">Share</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="musa_help_tab_1">The Musa Keys Agent is a small app that runs on your computer. It connects via Wifi to the Musa Keys app running on your phone. Once connected, it listens for the keys you press, and inserts them into the keyboard buffer. Your normal keyboard will continue to work as usual. The Musa Keys Agent also works as a virtual keyboard when it’s not connected, so you can enter Musa letters by clicking on the screen. To install the Musa Keys Agent, you’ll need to download it from the page www.musa.edu/musakeys.htm. During the installation, you’ll have to give it permission to access the WiFi and the keyboard buffer.\10\10</string>
    <string name="musa_help_tab_2">The first time you open the agent, you’ll see a password. Type this password into the Musa Keys app on your phone. The app will remember this password; if it changes, enter the new one. You can also use the password TESTMODE to play with the app without connecting. If it won’t connect, make sure that both your computer and the phone are connected to the same WiFi – that’s the most common cause of problems.</string>
    <string name="musa_help_tab_3"> Once connected, you can use the Musa keyboard normally. For help on how a Musa keyboard works, visit www.musa.edu/keyboard.htm. If you rotate your phone into Landscape mode, you’ll see a double keyboard, for use with both hands. You can switch back and forth just by rotating the phone. </string>
    <string name="musa_help_tab_4">The Musa keys app also enables you to enter Musa text in phone apps like WhatsApp, Telegram, Messenger, and so forth. It also enables you to read Musa text that you receive, even if the app doesn’t have a Musa font. To do both, we use the phone’s clipboard. To get started, open the Musa keys app and choose “Put Musa in the clipboard”. The app will go into background mode, waiting for you to open a normal keyboard and then rotate the phone. So if you want to send a message in Musa, open your messaging app with a normal keyboard. Then, rotate the phone into Landscape mode: a Musa keyboard will appear, ready for you to type your Musa text. If you want to mix it with normal text, just rotate the phone back and forth, as often as you like. When you’re done, click the checkmark at upper right: the keyboard will go back into the background, and your message will be in the clipboard. From there, just paste it into your messaging app. It works the same way to enable you to read Musa in a message you receive. Copy the message, rotate the phone, and you’ll see it displayed correctly.\10\10</string>
    <string name="musa_keys">Musa Keys</string>
    <string name="musa_mobile_menu_item">Put Musa in the clipboard</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="password">password</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="provide_password">Please provide a password</string>
    <string name="remote_connection_menu_item">Send Musa to computer</string>
    <string name="search_menu_title">Search</string>
    <string name="select_and_copy">Select and copy the Musa text, then turn your phone sideways</string>
    <string name="settings_menu_item">Settings</string>
    <string name="small">small</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="turn_it_back_upright">Turn it back upright to get back your normal keyboard</string>
    <string name="update_all_musa_fonts">/Update All Musa Fonts</string>
    <string name="use_app_with_computer">Using the app with your computer</string>
    <string name="use_app_with_phone">Using the app with your phone</string>
</resources>
