<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/choose_font_size"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/font_size_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp">

                    <RadioButton
                        android:id="@+id/font_size_large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:checked="true"
                        android:text="@string/large"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/font_size_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/medium"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/font_size_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/small"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_margin="10dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/choose_language"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/language_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp">

                    <RadioButton
                        android:id="@+id/language_auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="auto"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/language_english"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="English"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/language_spanish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="español"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/language_french"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="français"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/language_russian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="pусский"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/language_hindi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="हिंदी"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/language_chinese"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="中文"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/language_portuguese"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="Português"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/language_arabic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="end"
                        android:text="عربى"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/language_japanese"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="日本"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/language_vietnamese"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="Tiếng Việt"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
